--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,11 @@
 
 /* variables */
 :root {
-  --heading-color: #444;
-  --text-color: #0D0C1D;
-  --primary-color: #474973;
-  --highlight-color: #F1DAC4;
-  --bg-color: #A69CAC;
+  --heading-color: #ccd0a8;
+  --text-color: #070404;
+  --primary-color: #ab6762;
+  --highlight-color: #a7c089;
+  --bg-color: #f9f3f3;
 }
 
 /* base styles */
