--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -29,3 +29,8 @@
     text-decoration: none;
     margin-right: 20px;
   }
+
+  #Title {
+    padding-bottom: 5px;
+    color: var(--heading-color);
+  }
