--- a/src/components/OnlineUsers.css
+++ b/src/components/OnlineUsers.css
@@ -4,10 +4,11 @@
     padding: 30px;
     box-sizing: border-box;
     background: #fbfbfb;
-    color: var(--heading-color);
+    color: var(--text-color);
   }
   .user-list h2 {
-    text-align: right;
+    text-align: center;
+    color: var(--highlight-color);
     margin-bottom: 40px;
     padding-bottom: 10px;
     border-bottom: 1px solid #eee;
@@ -23,4 +24,24 @@
     margin-left: 10px;
     width: 40px;
     height: 40px;
+  }
+
+  .user-list .online-user {
+    display: inline-block;
+    margin-right: 10px;
+    width: 12px;
+    height: 12px;
+    background: #0ebb50;
+    border-radius: 50%;
+    margin-top: 2px;
+  }
+
+  .user-list .offline-user {
+    display: inline-block;
+    margin-right: 10px;
+    width: 12px;
+    height: 12px;
+    background: #ec1822;
+    border-radius: 50%;
+    margin-top: 2px;
   }
